Habits: Fix base style for links being unreadable in dark mode

--- a/apps/habits/assets/css/_base.scss
+++ b/apps/habits/assets/css/_base.scss
@@ -12,6 +12,10 @@ body{
         background-color: #000;
         color: #fff;
     }
+
+	a {
+		color: #fff;
+	}
 }
 
 main{
